--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
+
   <title>Litewallet</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
