--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
 <div id="js-main"></div>
 
 <script type="text/javascript">
+  window.$ = require('jquery');
+  require('popper.js');
+  require('bootstrap');
   require('./app/main.js');
 </script>
 </body>
