--- a/src/error.html
+++ b/src/error.html
@@ -13,6 +13,6 @@
 
 <div id="js-main"></div>
 
-<script type="text/javascript" src="./app/main.js"></script>
+<script type="text/javascript" src="./app/error.js"></script>
 </body>
 </html>
