--- a/src/error.html
+++ b/src/error.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
 
-  <title>XVault</title>
+  <title>XLite</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
