--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
-
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; img-src 'self' data:;
+    style-src 'self'; font-src 'self'; form-action 'self'; object-src 'none'">
   <title>XLite</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-
 <div id="js-main"></div>
-
 <script type="text/javascript" src="../app/main.js"></script>
 </body>
 </html>
