--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; img-src 'self' data:;
-    style-src 'self'; font-src 'self'; form-action 'self'; object-src 'none'">
+<!--  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; img-src 'self' data:;-->
+<!--    style-src 'self'; font-src 'self'; form-action 'self'; object-src 'none'">-->
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
